--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.20.0",
-    "next": "15.5.4",
+    "next": "^16.0.7",
     "next-auth": "^4.24.11",
-    "next-intl": "^4.3.9",
+    "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
     "query-string": "^9.3.1",
     "razorpay": "^2.9.6",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
@@ -59,7 +59,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "^16.0.7",
     "prisma": "^6.17.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
